--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p>Permis B, véhiculé</p>
             <p>07 78 24 88 50</p>
             <p>axel.roget@gmail.com</p>
+            <p>Ceci est une modification</p>
 
             <h2>Compétences :</h2>
             <p>HTML/CSS</p>
