--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<html lang="fr">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>CV Axel ROGET</title>
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Oxygen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&amp;family=Oxygen&amp;display=swap" rel="stylesheet" />
 </head>
 <body>
     <div id="header">
@@ -20,7 +17,6 @@
             <p>Permis B, véhiculé</p>
             <p>07 78 24 88 50</p>
             <p>axel.roget@gmail.com</p>
-            <p>Ceci est une modification</p>
 
             <h2>Compétences :</h2>
             <p>HTML/CSS</p>
@@ -33,39 +29,39 @@
             <div id="formation" class="section">
                 <h2>Formations :</h2>
                 <p>2022-2023 : IG2I, Institut de Génie Informatique et Industriel</p>
-                <p>Baccalauréat mention très bien<br/>Lycée Sainte Marie, Beaucamps-Ligny</p>
+                <p>Baccalauréat mention très bien<br />Lycée Sainte Marie, Beaucamps-Ligny</p>
             </div>
 
             <div class="section">
                 <h2>Ouvertures sur le monde de l'entreprise :</h2>
-                <p><b>Février 2022 :</b><br/>Stage service informatique de Decathlon :
+                <p><b>Février 2022 :</b><br />Stage service informatique de Decathlon :</p>
                     <ul>
-                        <ol>Projet de récupération des incidents informatiques avec Pager Duty</ol>
-                        <ol>Production d'un script de gesion de licences</ol>
+                        <li>Projet de récupération des incidents informatiques avec Pager Duty</li>
+                        <li>Production d'un script de gesion de licences</li>
                     </ul>
-                    <br/></p>
-                <p><b>Mars 2018 :</b><br/>
+                    <br />
+                <p><b>Mars 2018 :</b><br />
                     Stage d'observation en entreprise au service informatique du CHR de Lille et à 3axes
                 </p>
             </div>
 
             <div class="section">
                 <h2>Développement des compétences informatiques :</h2>
-                <p><b>2021 :</b><br/>103ème au France Cyber Security Challenge</p>
-                <p><b>2020 :</b><br/>Projet Frontend et Backend avec un serveur Node.JS et une base de données MondeDB</p>
-                <p><b>2017 - 2019 :</b><br/>Projet simulateur en Arduino, liant capteurs et actionneurs</p>
-                <p><b>Portfolio</b><br/><a href="https://axelroget.github.io">axelroget.github.io</a></p>
+                <p><b>2021 :</b><br />103ème au France Cyber Security Challenge</p>
+                <p><b>2020 :</b><br />Projet Frontend et Backend avec un serveur Node.JS et une base de données MondeDB</p>
+                <p><b>2017 - 2019 :</b><br />Projet simulateur en Arduino, liant capteurs et actionneurs</p>
+                <p><b>Portfolio</b><br /><a href="https://axelroget.github.io">axelroget.github.io</a></p>
             </div>
 
             <div id="autre" class="section">
                 <h2>Mais aussi :</h2>
                 <ul>
-                    <ol>
+                    <li>
                         Organisation et animation d’une conférence avec le Directeur Général de la Voix du Nord ainsi qu’avec le directeur régional d'EDF Hauts-De-France (2022)
-                    </ol>
-                    <ol>Participation concours général de NSI (2022)</ol>
-                    <ol>Participation Olympiades de Mathématiques (2021)</ol>
-                    <ol>Participation France Cyber Security Challenge (2021)</ol>
+                    </li>
+                    <li>Participation concours général de NSI (2022)</li>
+                    <li>Participation Olympiades de Mathématiques (2021)</li>
+                    <li>Participation France Cyber Security Challenge (2021)</li>
                 </ul>
             </div>
         </div>
