--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <div id="header">
-        <h1 id="nom">Axel ROGET</h1>
-        <h2>Recherche de stage</h2>
+        <img src="/ressources/photo.png" alt="Photo" />
+        <div>
+            <h1 id="nom">Axel ROGET</h1>
+            <div style="display:flex; align-items: center; ;">
+                <h2>Recherche de stage</h2>
+                <p style="margin-left: 7px; padding-top: 7px;"> du 5 juin au 14 juillet 2023</p>
+            </div>
+        </div>
     </div>
     <div id="page">
         <div id="left-div">
@@ -28,7 +34,7 @@
         <div id="right-div">
             <div id="formation" class="section">
                 <h2>Formations :</h2>
-                <p>2022-2023 : IG2I, Institut de Génie Informatique et Industriel</p>
+                <p><b>2022-2023 :</b> IG2I, Institut de Génie Informatique et Industriel, Lens</p>
                 <p>Baccalauréat mention très bien<br />Lycée Sainte Marie, Beaucamps-Ligny</p>
             </div>
 
