--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
         <img src="/ressources/photo.png" alt="Photo" />
         <div>
             <h1 id="nom">Axel ROGET</h1>
-            <div style="display:flex; align-items: center; ;">
+            <div style="display:flex; align-items: center;">
                 <h2>Recherche de stage</h2>
                 <p style="margin-left: 7px; padding-top: 7px;"> du 5 juin au 14 juillet 2023</p>
             </div>
+        </div>
+        <div style="margin-right: 30px; font-size: large;">
+            <p>Né le 19/01/2004 (19 ans)</p>
+            <p>144 Allée de la Source,<br />59320 Erquinghem-Le-Sec</p>
         </div>
     </div>
     <div id="page">
