--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>CV Axel ROGET</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="captcha.css" />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&amp;family=Oxygen&amp;display=swap" rel="stylesheet" />
 </head>
-<body>
+<body onload="init()">
     <div id="header">
-        <img src="/ressources/photo.png" alt="Photo" />
+        <img src="./ressources/photo.png" alt="Photo" />
         <div>
             <h1 id="nom">Axel ROGET</h1>
             <div style="display:flex; align-items: center;">
@@ -18,32 +19,48 @@
             </div>
         </div>
         <div style="margin-right: 30px; font-size: large;">
-            <p>Né le 19/01/2004 (19 ans)</p>
+            <p id="naissance">Né le 19/01/2004</p>
             <p>144 Allée de la Source,<br />59320 Erquinghem-Le-Sec</p>
         </div>
     </div>
+
+
+
     <div id="page">
         <div id="left-div">
-            <p>Permis B, véhiculé</p>
-            <p>07 78 24 88 50</p>
-            <p>axel.roget@gmail.com</p>
+            <p><img src="ressources/voiture.svg" alt="voiture" class="icon" />Permis B, véhiculé</p>
+            <p id="numTel" onclick="demandNumTel()"><img src="ressources/phone.svg" alt="téléphone" class="icon" />07 -- -- -- 50</p>
+            <p onclick="sendEmail()"><img src="ressources/mail.svg" alt="lettre" class="icon" />axel.roget@gmail.com</p>
 
             <h2>Compétences :</h2>
-            <p>HTML/CSS</p>
-            <p>Node JS</p>
-            <p>Arduino</p>
-            <p>Excel/VBA</p>
+            <p><img src="ressources/html.svg" alt="balise de code" class="icon" />HTML/CSS</p>
+            <p><img src="ressources/node.svg" alt="icone de processeur" class="icon" />Node JS</p>
+            <p><img src="ressources/arduino.svg" alt="bras de robot" class="icon" />Arduino</p>
+            <p><img src="ressources/excel.svg" alt="base de données" class="icon" />Excel/VBA</p>
+
+            <h2>Langues :</h2>
+            <p><img src="ressources/anglais.png" alt="drapeau Anglais" class="icon" />Anglais - B1</p>
+            <p><img src="ressources/espagnol.png" alt="drapeau Espagne" class="icon" />Espagnol - A2</p>
+
+            <h2>Loisirs :</h2>
+            <p><img src="ressources/escalade.svg" alt="escalade" class="icon" />Escalade (3ans)</p>
+            <p><img src="ressources/musique.svg" alt="note de musique" class="icon" />Piano (7 ans)</p>
+
+            <p style="text-align: center;">
+                <a href="http://validator.w3.org/check?uri=referer"><img
+                 id="certif" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+              </p>
 
         </div>
         <div id="right-div">
             <div id="formation" class="section">
-                <h2>Formations :</h2>
+                <h2 style="display:flex; align-items: center;"><img src="ressources/formation.svg" alt="formations" class="icon" />Formations :</h2>
                 <p><b>2022-2023 :</b> IG2I, Institut de Génie Informatique et Industriel, Lens</p>
                 <p>Baccalauréat mention très bien<br />Lycée Sainte Marie, Beaucamps-Ligny</p>
             </div>
 
             <div class="section">
-                <h2>Ouvertures sur le monde de l'entreprise :</h2>
+                <h2 style="display:flex; align-items: center;"><img src="ressources/desk.svg" alt="formations" class="icon" />Expériences professionnelles :</h2>
                 <p><b>Février 2022 :</b><br />Stage service informatique de Decathlon :</p>
                     <ul>
                         <li>Projet de récupération des incidents informatiques avec Pager Duty</li>
@@ -56,7 +73,7 @@
             </div>
 
             <div class="section">
-                <h2>Développement des compétences informatiques :</h2>
+                <h2 style="display:flex; align-items: center;"><img src="ressources/shell.svg" alt="formations" class="icon" />Développement des compétences informatiques :</h2>
                 <p><b>2021 :</b><br />103ème au France Cyber Security Challenge</p>
                 <p><b>2020 :</b><br />Projet Frontend et Backend avec un serveur Node.JS et une base de données MondeDB</p>
                 <p><b>2017 - 2019 :</b><br />Projet simulateur en Arduino, liant capteurs et actionneurs</p>
@@ -64,7 +81,7 @@
             </div>
 
             <div id="autre" class="section">
-                <h2>Mais aussi :</h2>
+                <h2>Réalisations :</h2>
                 <ul>
                     <li>
                         Organisation et animation d’une conférence avec le Directeur Général de la Voix du Nord ainsi qu’avec le directeur régional d'EDF Hauts-De-France (2022)
@@ -76,5 +93,11 @@
             </div>
         </div>
     </div>
+    <div id="captcha-container">
+        <label for="captcha-checkbox">Je ne suis pas un robot :</label>
+        <input onchange="notRobot()" type="checkbox" id="captcha-checkbox" />
+        <div class="captcha-checkmark"></div>
+    </div>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
